# EC-Pred

./: LICENSE  README.md  pyproject.toml
data/: BPI2013_closed.csv  env_permit.csv
src/: BPI2012_conversions.py  event_clustering.py  log_characteristics.py
src/best4ppm/configs/: data_configs.yml  general_config.yml  model_configs.yml
src/best4ppm/data/: sequencedata.py
src/best4ppm/eval/: evaluator.py
src/best4ppm/models/: best.py
src/best4ppm/util/: config_utils.py  model_logging.py  pruning.py  sequence_utils.py
src/contextppm/clustering/: HierarchicalSC.py  ProcessContextClustering.py  util.py
src/contextppm/configs/: data_configs.yml  general_config.yml  mlflow_config.yml  model_configs.yml
src/contextppm/dataset/: ECDataset.py
src/contextppm/embedding/: util.py
src/contextppm/encoding/: util.py
src/contextppm/eval/: evaluator.py
src/contextppm/ppm/: PPM.py
src/contextppm/util/: config_utils.py  logging.py  pruning.py  sequence_utils.py
src/util/: combinations.py  paths.py
