[project]
name = "contextppm"
version = "0.1.0"
description = "This is a project for a PPM framework that employs an event clustering to capture the context of events in all additional event attributes. Those clusters can be used for PPM with subsequent transformation of clusters into the original space via reverse transformation / sampling."
authors = [
    {name = "Simon Rauch",email = "rauch@dbs.ifi.lmu.de"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "pandas (==2.2.3)",
    "tqdm (>=4.67.1,<5.0.0)",
]

[tool.poetry]
packages = [{include = "contextppm", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
